validation, error handling and updating doc
